------------------------------------------------------------------------------
rsnapshot changelog
http://www.rsnapshot.org/
------------------------------------------------------------------------------

VERSION 1.3.1  (??? ?? 2007)
------------------------------------------------------------------------------
- Include rsnapshot-diff.1 in rpm.


VERSION 1.3.0  (Oct 21 2006)
------------------------------------------------------------------------------
- Add files rsnapreport.pl Upgrading_from_1.1 rsnapshot-HOWTO.en.html to rpm.
- fix a bug with removing interval.delete (with use_lazy_deletes).
- rsnapshot detects the global ssh_args option being set multiple times,
  and gives a config error suggesting the per-backup ssh_args instead.
- Move Upgrading section of INSTALL to docs/Upgrading_from_1.1.
- Incorporate patch from Alan Batie to fix bugs with include_conf.
- check for quoting on $rsync_long_args rather than just splitting on space.
- Change rsnapshot.conf default to have lockfile enabled.
- Check for stale lock files (PID not currently running).
- explicitly add mode 0644 to sysopen() to create lockfile
- give warning if write() or close() return 0 when writing/closing lockfile
- Make prev_max_interval "not present (yet), nothing to copy" message
  when rotating interval.0 more visible (level 3 instead of level 4).
- Add man page for rsnapshot-diff (generated from perldoc).
- Updates to rsnapshot man pages (via perldoc).
  - Use =item in AUTHORS section
  - move mis-placed =back
  - document stale lock file detection 
  - strongly recommend using a lock file
  - add a chmod to example backup script
  - change crontab example for weekly from 4 "weekly"s per month to 1 per week
  - expand on why higher intervals are done first via cron.
- Change space to tab after #cmd_rsnapshot_diff in rsnapshot.conf.default.in.
- In rpm patch, set cmd_rsnapshot_diff to /usr/bin/rsnapshot-diff.
- Set the test scripts t/*.t.in to run from the source directory