@@ -6,6 +6,9 @@ http://www.rsnapshot.org/
 VERSION 1.3.1  (??? ?? 2007)
 ------------------------------------------------------------------------------
 - Include rsnapshot-diff.1 in rpm.
+- Fix bug with rsnapshot sync the first time (when .sync does not exist)
+  trying to copy hourly.0 to .sync, even if hourly.0 doesn't exist.
+  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=413439
 
 
 VERSION 1.3.0  (Oct 21 2006)
